@@ -23,17 +23,6 @@
     <!-- =========================================================== -->
     <Set name="connectors">
       <Array type="org.mortbay.jetty.Connector">
-
-        <!-- NIO causes files to be locked on Windows. So we use BIO instead.
-        <Item>
-          <New class="org.mortbay.jetty.nio.SelectChannelConnector">
-            <Set name="port">8080</Set>
-            <Set name="maxIdleTime">30000</Set>
-            <Set name="Acceptors">2</Set>
-          </New>
-        </Item>
-        -->
-
         <Item>
           <New class="org.mortbay.jetty.bio.SocketConnector">
             <Set name="port">8181</Set>
@@ -56,9 +45,6 @@
            <Item>
              <New id="defaultHandler" class="org.mortbay.jetty.handler.DefaultHandler"/>
            </Item>
-           <Item>
-             <New id="requestLog" class="org.mortbay.jetty.handler.RequestLogHandler"/>
-           </Item>
          </Array>
         </Set>
       </New>
@@ -75,8 +61,8 @@
         <!-- ======================================================= -->
         <Item>
           <New id="aContext"  class="org.mortbay.jetty.handler.ContextHandler">
-            <Set name="contextPath">/</Set>
-            <Set name="resourceBase">./src/webapp/</Set>
+            <Set name="contextPath">/ajax</Set>
+            <Set name="resourceBase">./src/webapp/site/</Set>
             <Set name="handler">
               <New id="javadocServletHandler" class="org.mortbay.jetty.servlet.ServletHandler">
                 <Set name="servlets">
@@ -104,24 +90,40 @@
             </Set>
           </New>
         </Item>
+        
+        <Item>
+          <New id="aContext"  class="org.mortbay.jetty.handler.ContextHandler">
+            <Set name="contextPath">/ajax/api</Set>
+            <Set name="resourceBase">./src/webapp/api/</Set>
+            <Set name="handler">
+              <New id="javadocServletHandler" class="org.mortbay.jetty.servlet.ServletHandler">
+                <Set name="servlets">
+                    <Array type="org.mortbay.jetty.servlet.ServletHolder">
+                        <Item>
+                           <New class="org.mortbay.jetty.servlet.ServletHolder">
+                               <Set name="name">Default</Set>
+                               <Set name="className">org.mortbay.jetty.servlet.DefaultServlet</Set>
+                           </New>
+                        </Item>
+                     </Array>
+                 </Set>
 
+                <Set name="servletMappings">
+                    <Array type="org.mortbay.jetty.servlet.ServletMapping">
+                        <Item>
+                           <New class="org.mortbay.jetty.servlet.ServletMapping">
+                             <Set name="pathSpec">/</Set>
+                             <Set name="servletName">Default</Set>
+                           </New>
+                        </Item>
+                    </Array>
+                </Set>
+              </New>
+            </Set>
+          </New>
+        </Item>
       </Array>
      </Set>
-    </Ref>
-
-    <!-- =========================================================== -->
-    <!-- Configure Request Log                                       -->
-    <!-- =========================================================== -->
-    <Ref id="requestLog">
-      <Set name="requestLog">
-        <New id="requestLogImpl" class="org.mortbay.jetty.NCSARequestLog">
-          <Arg><SystemProperty name="jetty.home" default="."/>/logs/yyyy_mm_dd.request.log</Arg>
-          <Set name="retainDays">90</Set>
-          <Set name="append">true</Set>
-          <Set name="extended">false</Set>
-          <Set name="LogTimeZone">GMT-0500</Set>
-        </New>
-      </Set>
     </Ref>
 
     <!-- =========================================================== -->
